<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_panel">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/seven"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintRight_toLeftOf="@id/eight"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight"
        style="@style/main_panel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/eight"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/seven"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintRight_toLeftOf="@id/nine"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine"
        style="@style/main_panel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/nine"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/eight"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/four"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/seven"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/one"
        app:layout_constraintRight_toLeftOf="@id/five"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five"
        style="@style/main_panel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/five"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/eight"
        app:layout_constraintLeft_toRightOf="@id/four"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/six"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six"
        style="@style/main_panel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/nine"
        app:layout_constraintLeft_toRightOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/three"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/one"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/four"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintRight_toLeftOf="@id/two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/two"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintLeft_toRightOf="@id/one"
        app:layout_constraintBottom_toTopOf="@id/comma"
        app:layout_constraintRight_toLeftOf="@id/three"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/three"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/six"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintBottom_toTopOf="@id/equals"
        app:layout_constraintRight_toRightOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/zero"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/comma"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/comma"
        style="@style/main_panel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/comma"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/two"
        app:layout_constraintLeft_toRightOf="@id/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/equals" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        style="@style/main_panel_button"
        android:onClick="buttonClick"
        android:text="@string/equals"
        android:backgroundTint="@color/white_blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintLeft_toRightOf="@id/comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>